tests/errors/var_exist_54/e5.src
.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@v1
CREATEFRAME
PUSHFRAME
DEFVAR LF@v2
LT LF@v1 int@1 int@99
